<resources>
    <string name="app_name">Business Tracker</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Customer Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_place">Place</string>
    <string name="hint_city">City</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_comment">Comment/Feedback</string>
    <string name="err_msg_name">Enter Customer name</string>
    <string name="err_msg_address">Enter Address</string>
    <string name="err_msg_place">Enter Place</string>
    <string name="err_msg_city">Enter City</string>
    <string name="err_msg_email">Enter Valid Email</string>
    <string name="err_msg_phone">Enter Valid Phone</string>
    <string name="err_msg_comment">Please Comment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="welcome">Welcome To:Business Tracker</string>
    <string name="CreateMeeting">Create Meeting</string>
    <string name="Messages">Messages</string>
    <string name="MySchedule">My Schedule</string>
    <string name="Feedback">Feedback</string>
    <string name="Attendance">Attendance</string>
    <string name="Clients">Clients</string>
    <string name="Settings">Settings</string>
    <string name="Expenses">Expenses</string>
    <string name="Pendings">Pendings</string>
    <string name="Meetingdetails">Meeting details</string>
    <string name="meeting">Meeting:</string>
    <string name="manager_approval">Manager Approval:</string>
    <string name="Descreption">Description</string>
    <string name="Purpose">Purpose</string>
    <string name="payterm">PayTerm</string>
    <string name="place">Place</string>
    <string name="Client">Client</string>
    <string name="ContactPerson">Contact Person</string>
    <string name="Agenda">Agenda</string>
    <string name="Date">Date</string>
    <string name="total_amt">Total Amount</string>
    <string name="vendor">Vendor Name</string>
    <string name="valid_till">Valid Till:</string>
    <string name="container">Container Size</string>
    <string name="margin">Margin:</string>
    <string name="vendor_name">Vendor Name:</string>
    <string name="Time">Time</string>
    <string name="amt_in_idr">Amount in IDR:</string>
    <string name="Address">Address</string>
    <string name="Location">Location</string>
    <string name="StartMeeting">Start Meeting</string>
    <string name="EndMeeting">End Meeting</string>
    <string name="CurrentDate">Current Date</string>
    <string name="SIGNIN">SIGN IN</string>
    <string name="SIGNOUT">SIGN OUT</string>
    <string name="signin">signin</string>
    <string name="signout">signout</string>
    <string name="NeedReminder">Need Reminder</string>
    <string name="ReminderSettings">Reminder Settings</string>
    <string name="Submit">Submit</string>
    <string name="CreatedOn">Created On</string>
    <string name="CustomerName">Customer Name</string>
    <string name="Customer_Name">Customer Name:</string>
    <string name="Amount">Amount</string>
    <string name="amount">Amount:</string>
    <string name="requested_by">Requested By:</string>
    <string name="IDR2000">IDR2000</string>
    <string name="RequestType">Request Type</string>
    <string name="Receipt">Receipt</string>
    <string name="Expense">Expense</string>
    <string name="Title">Title</string>
    <string name="Status">Status</string>
    <string name="TotalAmount">Total Amount:</string>
    <string name="AccountLogin">Account Login</string>
    <string name="RememberMe">Remember Me</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Customer">Customer</string>
    <string name="SelectRequestTypes">Select Request Types</string>
    <string name="imagePath">image Path</string>
    <string name="Requestdetail">Request detail</string>
    <string name="Advance">Advance</string>
    <string name="REJECT">REJECT</string>
    <string name="APPROVE">APPROVE</string>
    <string name="PreRequestdetail">Pre-Request detail</string>
    <string name="RequestTypes">RequestType</string>
    <string name="Attachment">Attachment</string>
    <string name="view_attachment">View Attachment</string>
    <string name="Create">Create</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="city">City</string>
    <string name="CompanyName">Company Name</string>
    <string name="Mobile">Mobile</string>
    <string name="TaxDetail">Tax Detail</string>
    <string name="ListValue">List Value</string>
    <string name="SelectPurpose">Select Purpose</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="Ok">Ok</string>
    <string name="logout">Logout</string>
    <string name="edt_txt__name">User Name</string>
    <string name="edt_txt_last_name">Display Name</string>
    <string name="EmailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="posotion">Position</string>
    <string name="department">Department</string>
    <string name="manager">Reporting Manager</string>
    <string name="joiningdate">Joining Date</string>
    <string name="role">Role</string>
    <string name="Search">Search</string>
    <string name="PreRequest">Pre Request</string>
    <string name="ExpenseReport">Expense Report</string>
    <string name="Approvals">Approvals</string>
    <string name="SelectCustomer">Select Customer</string>
    <string name="FeedbackComment">Feedback/Comment</string>
    <string name="Pin">Pin</string>
    <string name="customer_company">Customer Company</string>
    <string name="Country">Country</string>
    <string name="location">Location</string>
    <string name="SelectMeeting">Select Meeting</string>
    <string name="SelectExpenseType">Select Expense Types </string>
    <string name="Currency">Currency</string>
    <string name="Comment">Comment</string>
    <string name="SelectDepartment">Select Department</string>
    <string name="dateformate">dd/mm/yy</string>
    <string name="DefaultCurrency">Default Currency</string>
    <string name="DateFormate">Date Formate</string>
    <string name="NumberFormate">Number Formate</string>
    <string name="Language">Language</string>
    <string name="selected_request">Selected Request Types</string>
    <string name="reportdetails">Report Details</string>
    <string name="balancetorct">Balance To Rct:</string>
    <string name="close">close</string>
    <string name="expensedetails">Expense Details</string>
    <string name="appro_details">Approval Details</string>
    <string name="quotation_details">Quotation Details</string>
    <string name="meetingdate">Meeting Date</string>
    <string name="rejection_msg">Comment:</string>
    <string name="meeting_time">Meeting Time:</string>
    <string name="expense_date">Expense Date:</string>
    <string name="pre_rest_date">Pre-Request Date:</string>
    <string name="exch_rate">Exchange Rate:</string>
    <string name="expensetype">ExpenseType</string>
    <string name="expsense_des">Expense Description:</string>
    <string name="pre_des">Pre-Request Description:</string>
    <string name="meeting_purpose">Meeting Purpose:</string>
    <string name="edit">Edit</string>
    <string name="to">To:</string>
    <string name="type_yourmessage_Here">Type Your Message Here</string>
    <string name="send">Send</string>
    <string name="no_record_found">No Record Found</string>
    <string name="customer_list">Customer List</string>
    <string name="add_prerequest">Add Pre-Request</string>
    <string name="bTrack">BTrack</string>
    <string name="expense_list">Expense List</string>
    <string name="approval_list">Approved By Manager</string>
    <string name="expense_status">Expense Status</string>
    <string name="expense_report">Expense Report</string>
    <string name="report_details">Report Details</string>
    <string name="feedback">Feedback</string>
    <string name="meeting_details">Meeting Details</string>
    <string name="messages">Messages</string>
    <string name="message_details">Message Details</string>
    <string name="meeting_list">Meeting List</string>
    <string name="add_customer">Add Customer</string>
    <string name="create_expense">Create Expense</string>
    <string name="pending_list">Pre-Request List</string>
    <string name="expense_approval">Expense Approval</string>
    <string name="pending_details">Pre-Request Details</string>
    <string name="exp_app_details">Exp Approval Detail</string>
    <string name="pre_requests">Pre-Requests </string>
    <string name="pre_request_details">Pre-Request Details</string>
    <string name="reminder_settings">Reminder Settings</string>
    <string name="new_message">New Message</string>
    <string name="status_detail">Status details</string>
    <string name="settings">Settings</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="add_photo">Add Photo!</string>
    <string name="data">data</string>
    <string name="search_by_customer_name">Search By Customer Name</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="enter_descreption">Enter Descreption</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_agenda">Enter Agenda</string>
    <string name="enter_contact_person">Enter Contact Person</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_place">Enter Place</string>
    <string name="enter_city">Enter City</string>
    <string name="select_customer">Select Customer</string>
    <string name="select_company">Select Company</string>
    <string name="select_payterm">Select PayTerm</string>
    <string name="select_country">Select Country</string>
    <string name="select_location">Select Location</string>
    <string name="search_here">Search Here</string>
    <string name="successfully_posted">Successfully posted</string>
    <string name="description">Description: </string>
    <string name="purpose">Purpose:</string>
    <string name="client">Client:</string>
    <string name="agenda">Agenda:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="address">Address:</string>
    <string name="contact_person">Contact Person:</string>
    <string name="expense_created_on">Expense Created On:</string>
    <string name="customer_name">Customer Name:</string>
    <string name="advance">Advance:</string>
    <string name="expense_type">ExpenseType:</string>
    <string name="meeting_date">Meeting Date:</string>
    <string name="total">Total:</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="please_try_again">Please Try Again!</string>
    <string name="end">END</string>
    <string name="start">START</string>
    <string name="master_id">Master Id:</string>
    <string name="exchange_rate">Exchange Rate:</string>
    <string name="margin_currency">Margin Currency:</string>
    <string name="audit_mster_id">Audit Master:</string>
    <string name="commodity">Commodity:</string>
    <string name="s_no">Serial No:</string>
    <string name="charge_code">Charge Code:</string>
    <string name="v_quot_no">Quotation No:</string>
    <string name="crg_amt">Charge Amount:</string>
    <string name="container_size">Container Size:</string>
</resources>