<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/expensedetails"
        android:textColor="@color/text_hint_color"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_uploaded"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_receipt" />

    <TextView
        android:id="@+id/txtEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_8sdp"
        android:text="@string/edit"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:drawablePadding="@dimen/_5sdp"
        android:drawableLeft="@drawable/ic_edit"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_11sdp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtdescreption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/Descreption"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAdvance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/Advance"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/txtCreatedOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/CreatedOn"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/Address"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/txtCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/CustomerName"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/txtMeetingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/meetingdate"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/txtExpenseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/expensetype"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_10sdp" />


    <Button
        android:id="@+id/btn_close"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn"
        android:text="@string/Ok"
        android:textColor="@color/white_color"
        android:textSize="@dimen/_15sdp" />


</LinearLayout>

