<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/Requestdetail"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txtdescreption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:text="@string/Descreption"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:text="@string/Date"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtadvance"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"

                android:text="@string/Advance"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/Address"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtcustomername"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/CustomerName"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txt_expensetype"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/expensetype"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />
            <TextView
                android:id="@+id/txt_meeting_date"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"

                android:text="@string/meetingdate"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txt_meeting_time"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"

                android:text="@string/meeting_time"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />
            <TextView
                android:id="@+id/txt_expense_date"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"

                android:text="@string/expense_date"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txt_exchange_rate"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"

                android:text="@string/exchange_rate"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:weightSum="2">

                <Button
                    android:id="@+id/reject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:background="@drawable/btnreject"
                    android:text="@string/REJECT"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/approve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:background="@drawable/btnaccept"
                    android:text="@string/APPROVE"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
